# crafty

./: Cargo.toml  LICENSE
crafty/: Cargo.toml
crafty/benches/: benchmark.rs
crafty/src/: action.rs  action_set.rs  action_states.rs  condition.rs  craft_context.rs  craft_state.rs  executor.rs  intrinsics.rs  lib.rs  player.rs  recipe.rs  simulator.rs  simulator_no_rng.rs  solver.rs
crafty/src/actions/: action.rs  action_type.rs  advanced_touch.rs  basic_synthesis.rs  basic_touch.rs  byregots_blessing.rs  careful_observation.rs  careful_synthesis.rs  delicate_synthesis.rs  final_appraisal.rs  focused_synthesis.rs  focused_touch.rs  great_strides.rs  groundwork.rs  hasty_touch.rs  heart_and_soul.rs  innovation.rs  intensive_synthesis.rs  manipulation.rs  masters_mend.rs  mod.rs  muscle_memory.rs  observe.rs  precise_touch.rs  preparatory_touch.rs  prudent_synthesis.rs  prudent_touch.rs  rapid_synthesis.rs  reflect.rs  standard_touch.rs  trained_eye.rs  trained_finesse.rs  tricks_of_the_trade.rs  veneration.rs  waste_not.rs  waste_not2.rs
