[package]
name = "crafty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.7"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.132", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[lib]
doctest = false
