[package]
name = "crafty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_indexing = { path = "enum_indexing" }
rand = { version = "0.8.5", features = ["small_rng"] }
ouroboros = "0.18.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[lib]
doctest = false
